importancevafqmc/err/submit.sh_9337551.err

The following have been reloaded with a version change:
  1) Mambaforge/23.3.1-fasrc01 => Mambaforge/22.11.1-fasrc01
  2) python/3.10.12-fasrc01 => python/3.10.9-fasrc01

  File "<string>", line 1
    import numpy as np; print(' '.join([f'{x:.5f}' for x in [0.4, 2.4]))
                                                                      ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 29, in <module>
    dist = float(sys.argv[1])
           ^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
